2011-02-29  Marcus Mueller  <znek@mulle-kybernetik.com>

	* FUSEOFSAppController.[hm]: new controller class designed to works as
	  a generic NSApplication delegate in a nib/xib/gorm file suitable
	  for creating and destroying the associated FUSEObjectFileSystem
	  subclass. The FUSEObjectFileSystem class to use is determined
	  via the new "FUSEObjectFileSystemClass" NSUserDefault.

2011-02-26  Marcus Mueller  <znek@mulle-kybernetik.com>

	* FUSEObjectFileSystem.m, FUSEOFSFileProxy.m, NSObject+FUSEOFS.m: fixes
	  for GNUstep build

	* NSString+FUSEOFS.[hm]: removed

	* NSObject+FUSEOFS.[hm]: merged contents from NSString+FUSEOFS.[hm] in
	  order to make our life easier (keep all extensions in a single place)

	* FUSEObjectFileSystem.[hm]: fixed missing and wrong imports

	* GNUmakefile: adjusted for gnustep-make 2.4.0

2010-12-22  Marcus Mueller  <znek@mulle-kybernetik.com>

	* NSObject+FUSEOFS.[hm]: changed layout and renamed every wording of
	  'directory' into 'container'.

	* FUSEOFSMemoryFolder.[hm]: renamed to FUSEOFSMemoryContainer

	* FUSEOFSMemoryContainer.[hm]: see above

	* FUSEObjectFileSystem.m: minor fix for valueOfExtendedAttribute:...

2010-12-21  Marcus Mueller  <znek@mulle-kybernetik.com>

	* FUSEObjectFileSystem.m: added workaround for a MacFUSE bug which
	  prevented deleting extended attributes - this triggers an annoying
	  warning upon startup (we're implementing a deprecated method) which
	  is totally harmless.

	* NSObject+FUSEOFS.[hm]: added api for dealing with extended
	  attributes

	* FUSEObjectFileSystem.m: implemented extended attributes functionality
	
	* FUSEOFSMemoryObject.[hm]: new class, suiting as (new) abstract base
	  class for FUSEMemoryFile and FUSEMemoryFolder.

	* FUSEOFSMemoryFile.[hm]: code refactoring
	
	* FUSEOFSMemoryFolder.[hm]: code refactoring

2010-12-21  Marcus Mueller  <znek@mulle-kybernetik.com>

	* NSObject+FUSEOFS.[hm]: added -setFileAttributes: api
